test/tests/ParseError2.expected
Broken.frost:8:5: error: expected a declaration, but found 'Broken'
ParseError2.frost:2:23: error: unknown identifier
2 errors
