test/tests/ParseError2.frost
method main() {
    Console.printLine(extras.Broken())
}